<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Money Management v1</string>
    <string name="add_user">Add user</string>
    <string name="name">Name</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_interest_rate">Enter Interest Rate</string>
    <string name="preview">Preview</string>
    <string name="date">Date</string>
    <string name="_01_01_2019">01/01/19</string>
    <string name="aadhar_card">Aadhar Card</string>
    <string name="no">No</string>
    <string name="address">User Address</string>
    <string name="reference">User Reference</string>
    <string name="relative">User Relative</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="google_requestIdToken" tools:ignore="TypographyDashes">751456404768-4d2026772jh67jk1286mardp0c9dl6kc.apps.googleusercontent.com</string>
    <string name="log_out">Log Out</string>
    <string name="submit">Submit</string>
    <string name="desc">desc</string>
    <string name="add_photo">Add Photo</string>
    <string name="upload">upload</string>
    <string name="data">DATA</string>
    <string name="documents">Documents</string>
    <string name="rate">Rate</string>
    <string name="rupee_symbol">₹</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="next_amount">Next</string>
    <string name="amount_left">Total</string>
    <string name="next_date">Next Date</string>
    <string name="userID">UserID</string>
    <string name="update">Update</string>
    <string name="complete">Complete</string>
    <string name="settings">Settings</string>
    <string name="accounts">Accounts</string>
    <string name="give">Give</string>
    <string name="take">Take</string>
    <string name="amount">Amount</string>
    <string name="interest">Interest</string>
    <string name="both">Both</string>
    <string name="type">Type</string>
    <string name="cash">cash</string>
    <string name="transaction">Transaction</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total">Total</string>
</resources>
